# quickjs-esp32

./: CMakeLists.txt  README.md  cutils.h  qjs.c  quickjs-libc.c  quickjs.c
esp/: esp_api.c  esp_api.h
main/: CMakeLists.txt  hello_world_main.c  qjs.c
